force-app/main/default/objects/vf_Recognition__c/vf_Recognition__c.object-meta.xml
<CustomObject>
    <label>Recognition</label>
    <pluralLabel>Recognitions</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Recognition Number</label>
        <displayFormat>REC-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to track volunteer recognitions and awards</description>
</CustomObject>