force-app/main/default/objects/vf_Recognition__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
    <description>Date the recognition was awarded</description>
    <inlineHelpText>The date when this recognition was awarded</inlineHelpText>
</CustomField>