force-app/main/default/objects/vf_Recognition__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Description of the recognition</description>
    <inlineHelpText>Detailed description of this recognition and why it was awarded</inlineHelpText>
</CustomField>