force-app/main/default/objects/vf_Recognition__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
    <description>Name of the recognition</description>
    <inlineHelpText>The name of this recognition or award</inlineHelpText>
</CustomField>