force-app/main/default/objects/vf_Recognition__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Award</fullName>
                <default>true</default>
                <label>Award</label>
            </value>
            <value>
                <fullName>Badge</fullName>
            </value>
            <value>
                <fullName>Certificate</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of recognition</description>
    <inlineHelpText>The type of recognition given</inlineHelpText>
</CustomField>