force-app/main/default/objects/vf_Recognition__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>50</length>
    <type>Text</type>
    <description>Value or level of the recognition (e.g., Gold, Silver)</description>
    <inlineHelpText>The value or level of this recognition (e.g., Gold, 5-Year, etc.)</inlineHelpText>
</CustomField>