force-app/main/default/objects/vf_Recognition__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>vf_Volunteer__c</referenceTo>
    <relationshipLabel>Recognitions</relationshipLabel>
    <relationshipName>Recognitions</relationshipName>
    <type>Lookup</type>
    <description>Volunteer who received the recognition</description>
    <inlineHelpText>The volunteer who received this recognition</inlineHelpText>
</CustomField>